--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^3.2.10"
   }
 }
